--- a/web.config
+++ b/web.config
@@ -1,5 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
+  <appSettings>
+    <add key="PathToBlogRecords" value="records" />
+    <add key="ImagesDirectory" value="images" />
+    <add key="BlogTocTitle" value="Welcome!" />
+    <add key="DisqusShortname" value="onefileblog" />
+    <add key="BootswatchTheme" value="United" />
+  </appSettings>
   <system.web>
     <compilation targetFramework="4.0" />
   </system.web>
@@ -8,8 +15,8 @@
     <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
-    <httpRedirect enabled ="true" httpResponseStatus ="Found">
-      <add wildcard="/" destination="/blog"/>
+    <httpRedirect enabled="true" httpResponseStatus="Found">
+      <add wildcard="/" destination="/blog" />
     </httpRedirect>
   </system.webServer>
 </configuration>
