--- a/OneFileBlog.csproj
+++ b/OneFileBlog.csproj
@@ -41,10 +41,9 @@
   <ItemGroup>
     <Compile Include="BlogModule.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="records\images\" />
-  </ItemGroup>
-  <ItemGroup>
+    <Content Include="records\images\borscht.jpg" />
     <Content Include="records\index.md" />
   </ItemGroup>
   <ItemGroup>
@@ -65,6 +64,9 @@
     <Content Include="web.config">
       <SubType>Designer</SubType>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="records\how-this-stuff-works.md" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
